syntax = "proto3";
import "google/protobuf/any.proto";

package mail;

message payload {
  string to = 1;
  string subject = 2;
  optional string context = 3;
  optional string templateId = 4;
  string projectId = 5;
  optional string providerId = 6;
  string secretKey = 7;
  string from = 8;
}

message status { string response = 1; }

message Types {
  oneof types {
    string str = 1;
    double dou = 2;
  }
}
